properly define actions in moamont